<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="Listener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/touch_bg"
        android:onClick="@{Listener}"
        android:padding="10dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            app:layout_constraintStart_toEndOf="@id/name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/defaultAddress"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:onClick="@{Listener}"
            android:padding="10dp"
            android:text="@string/default_address"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address" />

        <TextView
            android:id="@+id/edit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/size_normal_shape"
            android:gravity="center"
            android:onClick="@{Listener}"
            android:padding="10dp"
            android:text="@string/edit"
            app:layout_constraintBottom_toBottomOf="@id/defaultAddress"
            app:layout_constraintEnd_toStartOf="@id/delete"
            app:layout_constraintStart_toEndOf="@id/defaultAddress"
            app:layout_constraintTop_toTopOf="@id/defaultAddress" />

        <TextView
            android:id="@+id/delete"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/size_normal_shape"
            android:gravity="center"
            android:onClick="@{Listener}"
            android:padding="10dp"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="@id/defaultAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/edit"
            app:layout_constraintTop_toTopOf="@id/defaultAddress" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
