<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.DetailFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/line"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:elevation="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D8D8D8"
                app:layout_scrollFlags="scroll|enterAlways">

                <com.bigkoo.convenientbanner.ConvenientBanner
                    android:id="@+id/convenientBanner"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:canLoop="true"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/priceLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:padding="10dp"
                    app:layout_constraintTop_toBottomOf="@id/convenientBanner">

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#D94525"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/listing_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#858585"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/chooseDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/touch_bg"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_right"
                    android:drawableRight="@drawable/ic_keyboard_arrow_right"
                    android:gravity="start|center"
                    android:padding="10dp"
                    android:text="@string/choose_detail"
                    android:textColor="#292929"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/priceLayout" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.ruansu.littletest.view.CustomTabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/chooseDetail"
                app:tabIndicatorColor="#144688"
                app:tabIndicatorFullWidth="true"
                app:tabIndicatorHeight="2dp"
                app:tabPadding="10dp"
                app:tabSelectedTextColor="#292929"
                app:tabTextColor="#8A8A8A" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#D6D6D6"
        app:layout_constraintBottom_toTopOf="@id/functionLayout"
        app:layout_constraintTop_toBottomOf="@id/topLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/functionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buy"
            app:layout_constraintHorizontal_weight="1.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_home_black"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/home_page"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/customer"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="1px"
                android:layout_height="0dp"
                android:background="#D6D6D6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/customer"
                app:layout_constraintStart_toEndOf="@id/home"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/customer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_contact_phone"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/customer_service"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/shopping"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/home"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="1px"
                android:layout_height="0dp"
                android:background="#D6D6D6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/shopping"
                app:layout_constraintStart_toEndOf="@id/customer"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/shopping"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_shopping_cart"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/shopping_car"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/customer"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="#D6D6D6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/shopping"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/buy"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/buy_now"
            android:textColor="#FD7304"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/add"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/layout"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#FD7304"
            android:gravity="center"
            android:text="@string/add_to_shopping_car"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/buy"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>